--- a/arion-penginapan.html
+++ b/arion-penginapan.html
@@ -77,7 +77,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="services.html" class="nav-item nav-link">Services</a>
+                        <a href="services.html" class="nav-item nav-link">Explore SBB</a>
                         <a href="packages.html" class="nav-item nav-link">Packages</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
@@ -100,7 +100,7 @@
         <!-- Header Start -->
         <div class="container-fluid bg-arion-penginapan">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-white display-3 mb-4">Rooms</h1>
+                <h3 class="text-white display-3 mb-4">Arion Penginapan</h1>
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     
@@ -122,8 +122,8 @@
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-hotel fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">30</h2>
-                                <p class="mb-0">Rooms</p>
+                                <h2 class="mb-1" data-toggle="counter-up">Rooms</h2>
+                                <p class="mb-0">Tersedia banyak Pilihan ruangan Yang nyaman</p>
                             </div>
                         </div>
                     </div>
@@ -131,8 +131,8 @@
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-users-cog fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">6</h2>
-                                <p class="mb-0">Staffs</p>
+                                <h2 class="mb-1" data-toggle="counter-up">Staffs</h2>
+                                <p class="mb-0">Tim Yang Ramah Dalam melayani Tamu</p>
                             </div>
                         </div>
                     </div>
@@ -140,8 +140,8 @@
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
                                 <i class="fa fa-users fa-2x text-primary mb-2"></i>
-                                <h2 class="mb-1" data-toggle="counter-up">834</h2>
-                                <p class="mb-0">Clients</p>
+                                <h2 class="mb-1" data-toggle="counter-up">Clients</h2>
+                                <p class="mb-0">Jadilah Bagian Dari Tamu Istimewah</p>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                 <div class="room-item shadow rounded overflow-hidden">
                     <div class="position-relative">
                         <img class="img-fluid" src="img/fasilitas arion (4).jpg" alt="">
-                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Rp.90.000/Night</small>
+                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Pelayanan</small>
                     </div>
                     <div class="p-4 mt-2">
                         <div class="d-flex justify-content-between mb-3">
@@ -194,8 +194,8 @@
                             </div>
                         </div>
                         <div class="d-flex mb-3">
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>2 person</small>
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>person</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>Bath</small>
                             <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                         </div>
                         <p class="text-body mb-3">Selamat datang di Arion Penginapan,disini setiap tamu disambut dengan senyuman dan pelayanan prima</p>
@@ -207,7 +207,7 @@
                 <div class="room-item shadow rounded overflow-hidden">
                     <div class="position-relative">
                         <img class="img-fluid" src="img/fasilitas arion (5).jpg" alt="">
-                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Rp.90.000/Night</small>
+                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Air Conditioner</small>
                     </div>
                     <div class="p-4 mt-2">
                         <div class="d-flex justify-content-between mb-3">
@@ -221,8 +221,8 @@
                             </div>
                         </div>
                         <div class="d-flex mb-3">
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>1 AC</small>
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>AC</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>Bath</small>
                             <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                         </div>
                         <p class="text-body mb-3">Arion Penginapan menyediakan AC agar para tamu atau pengunjung nyaman untuk menikmati suasan dalam ruangan</p>
@@ -234,7 +234,7 @@
                 <div class="room-item shadow rounded overflow-hidden">
                     <div class="position-relative">
                         <img class="img-fluid" src="img/fasilitas arion (2).jpeg" alt="">
-                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Rp.90.000/Night</small>
+                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">WI-FI</small>
                     </div>
                     <div class="p-4 mt-2">
                         <div class="d-flex justify-content-between mb-3">
@@ -248,8 +248,8 @@
                             </div>
                         </div>
                         <div class="d-flex mb-3">
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>1 Wi-Fi</small>
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>Wi-Fi</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>Bath</small>
                             <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                         </div>
                         <p class="text-body mb-3">Teredia Juga Jaringan Wi-Fi agar para Tamu dapat nyaman menikmati waktu luang mereka di arion penginapan</p>
@@ -261,7 +261,7 @@
                 <div class="room-item shadow rounded overflow-hidden">
                     <div class="position-relative">
                         <img class="img-fluid" src="img/arion penginapan.jpg" alt="">
-                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Rp.90.000/Night</small>
+                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Room</small>
                     </div>
                     <div class="p-4 mt-2">
                         <div class="d-flex justify-content-between mb-3">
@@ -275,8 +275,8 @@
                             </div>
                         </div>
                         <div class="d-flex mb-3">
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>1 Bed</small>
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>Bed</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>Bath</small>
                             <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                         </div>
                         <p class="text-body mb-3">Arion Penginapan Juga memiliki Tempat Tidur Yang di desain cukup Unik Sehingga membuat para Tamu Nyaman Dan tenang Menikmati Setiap Momen Di sini</p>
@@ -288,7 +288,7 @@
                 <div class="room-item shadow rounded overflow-hidden">
                     <div class="position-relative">
                         <img class="img-fluid" src="img/fasilitas arion (1).jpeg" alt="">
-                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Rp.90.000/Night</small>
+                        <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">Televisi</small>
                     </div>
                     <div class="p-4 mt-2">
                         <div class="d-flex justify-content-between mb-3">
@@ -302,8 +302,8 @@
                             </div>
                         </div>
                         <div class="d-flex mb-3">
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>1 TV</small>
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>TV</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i> Bath</small>
                             <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                         </div>
                         <p class="text-body mb-3">Selalu Tersedia TV Di setiap ruangan Arion Penginapan Untuk menyambut kedatangan para tamu agar tetap nyaman dalam menikmati momen bermalam</p>
@@ -329,8 +329,8 @@
                             </div>
                         </div>
                         <div class="d-flex mb-3">
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>10 cars</small>
-                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>cars</small>
+                            <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i> Bath</small>
                             <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
                         </div>
                         <p class="text-body mb-3">Arion Penginapan dilengkapi dengan fasilitas dan akomodasi yang lengkap salah satunya area parkir yang cukup luas sehingga para tamu tidak ragu untuk parkir</p>
@@ -386,7 +386,7 @@
                             <a href="about.html"><i class="fas fa-angle-right me-2"></i> About</a>
                             <a href="index.html"><i class="fas fa-angle-right me-2"></i> Home</a>
                             <a href="blog.html"><i class="fas fa-angle-right me-2"></i> Blog</a>
-                            <a href="services.html"><i class="fas fa-angle-right me-2"></i> Services</a>
+                            <a href="services.html"><i class="fas fa-angle-right me-2"></i>Explore SBB</a>
                             <a href="packages.html"><i class="fas fa-angle-right me-2"></i> packages</a>
                             <a href="gallery.html"><i class="fas fa-angle-right me-2"></i> Our Galeri</a>
                         </div>
@@ -406,7 +406,7 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Information-Hotels</h4>
                             <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contact</a>
-                            <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Kairatu</a>
+                            <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Piru</a>
                             <a href="hotel-kairatu-beach.html"><i class="fas fa-angle-right me-2"></i> Hotel Kairatu Beach</a>
                             <a href="arion-penginapan.html"><i class="fas fa-angle-right me-2"></i> Arion Penginapan</a>
                             <a href="mitra-hotel.html"><i class="fas fa-angle-right me-2"></i> Mitra Hotel</a>
