--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a href="https://www.bing.com/mapbuilder/#background=Bing&disable_features=boundaries&map=8.00/-3.177/129.180"target="_blank" class="navbar-brand p-0">
                     <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Wisata-SBB</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
@@ -77,7 +77,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="services.html" class="nav-item nav-link active">Services</a>
+                        <a href="services.html" class="nav-item nav-link active">Explore SBB</a>
                         <a href="packages.html" class="nav-item nav-link">Packages</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
@@ -99,10 +99,10 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-white display-3 mb-4">Our Services</h1>
+                <h3 class="text-white display-3 mb-4">Explore SBB</h1>
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active text-white">Services</li>
+                    <li class="breadcrumb-item active text-white">Informasi Wisata</li>
                 </ol>    
             </div>
         </div>
@@ -112,8 +112,8 @@
         <div class="container-fluid bg-light service py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                    <h5 class="section-title px-3">Searvices</h5>
-                    <h1 class="mb-0">Layanan Kami</h1>
+                    <h5 class="section-title px-3">Explore SBB</h5>
+                    <h1 class="mb-0">Informasi Wisata</h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-6">
@@ -121,8 +121,9 @@
                             <div class="col-12">
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
                                     <div class="service-content text-end">
-                                        <h5 class="mb-4">Paket Wisata Menarik</h5>
-                                        <p class="mb-0">Jelajahi Seram Bagian Barat dengan paket wisata kami yang dirancang khusus untuk memenuhi berbagai minat dan preferensi Anda. Dari petualangan alam hingga tur budaya, kami memiliki paket yang sesuai untuk Anda.
+                                        <h5 class="mb-4">Destinasi Wisata Populer</h5>
+                                        <p class="mb-0">Temukan berbagai destinasi wisata terbaik di seram bagian barat.mulai dari selat valentine yang menakjubkan,hingga pulau osi yang eksotis.kami menyediakan
+                                            tempat-tempat yang wajib anda kunjungi.
                                         </p>
                                     </div>
                                     <div class="service-icon p-4">
@@ -133,8 +134,8 @@
                             <div class="col-12">
                                 <div class="service-content-inner d-flex align-items-center  bg-white border border-primary rounded p-4 pe-0">
                                     <div class="service-content text-end">
-                                        <h5 class="mb-4">Akomodasi Nyaman</h5>
-                                        <p class="mb-0">Temukan tempat menginap yang sempurna dengan pilihan akomodasi kami, mulai dari resor mewah hingga penginapan lokal yang ramah. Kami bekerja sama dengan penyedia akomodasi terbaik untuk memastikan kenyamanan Anda.
+                                        <h5 class="mb-4">Kuliner Khas</h5>
+                                        <p class="mb-0">Jelajahi kelezatan kuliner tradisional yang hanya anda bisa temukan diseram bagian barat.dari hidangan laut segar hingga makanan tradisional seperti papeda dan ikan kuah kuning,temukan restoran dan wakun makan yang wajib dicoba.
                                         </p>
                                     </div>
                                     <div class="service-icon p-4">
@@ -145,8 +146,9 @@
                             <div class="col-12">
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 pe-0">
                                     <div class="service-content text-end">
-                                        <h5 class="mb-4">Tur Pribadi dan Grup</h5>
-                                        <p class="mb-0">Apakah Anda berwisata sendirian, bersama pasangan, atau dalam grup besar, kami menawarkan tur yang disesuaikan untuk memenuhi kebutuhan Anda. Kami memastikan setiap tur dipersonalisasi untuk pengalaman yang maksimal.
+                                        <h5 class="mb-4">Tips Perjalanan</h5>
+                                        <p class="mb-0">berikut adalah tips perjalanan yang peru anda ketahui sebelum mengunjungi seram bagian barat. dari persiapan
+                                            fisik,pakaian yang disarankan, hingga etika yang harus dijaga saat berinteraksi dengan masyarakat lokal.
                                         </p>
                                     </div>
                                     <div class="service-icon p-4">
@@ -176,8 +178,9 @@
                                         <i class="fa fa-globe fa-4x text-primary"></i>
                                     </div>
                                     <div class="service-content">
-                                        <h5 class="mb-4">Panduan Wisata Profesional</h5>
-                                        <p class="mb-0">Nikmati wisata tanpa khawatir dengan panduan wisata profesional kami. Mereka adalah ahli lokal yang akan membawa Anda ke destinasi terbaik, memberikan informasi mendalam, dan memastikan keamanan serta kenyamanan Anda.
+                                        <h5 class="mb-4">Budaya dan Tradisi</h5>
+                                        <p class="mb-0">mengenal lebih dekat kebudayaan dan tradisi masyarakat seram bagian barat. pelajari tentang
+                                            upacara adat, seni tari, dan musik tradisional yang menjadi bagian tak terpisahkan dari kehidupan  masyarakat setempat.
                                         </p>
                                     </div>
                                 </div>
@@ -188,8 +191,9 @@
                                         <i class="fa fa-hotel fa-4x text-primary"></i>
                                     </div>
                                     <div class="service-content">
-                                        <h5 class="mb-4">Pengalaman Budaya Lokal</h5>
-                                        <p class="mb-0">Rasakan kekayaan budaya Maluku dengan mengikuti kegiatan budaya lokal. Nikmati tarian tradisional, kuliner khas, dan upacara adat yang memberikan wawasan mendalam tentang kehidupan masyarakat setempat.
+                                        <h5 class="mb-4">Akomodasi</h5>
+                                        <p class="mb-0">cari tahu berbagai penginapan yang tersedia diseram bagian barat,dari homestay sederhana hingga resos yang nyaman.meskipun belum ada sistem
+                                            pemesanan online,anda dapat menemukan informasi kontak dan lokasi untuk memudahkan perencanaan anda
                                         </p>
                                     </div>
                                 </div>
@@ -200,8 +204,9 @@
                                         <i class="fa fa-user fa-4x text-primary"></i>
                                     </div>
                                     <div class="service-content">
-                                        <h5 class="mb-4">Transportasi Terpercaya</h5>
-                                        <p class="mb-0">Kami menyediakan layanan transportasi yang andal dan nyaman untuk memudahkan perjalanan Anda di Seram Bagian Barat. Dari penjemputan bandara hingga antar-jemput destinasi wisata, kami siap melayani Anda.
+                                        <h5 class="mb-4">Transportasi Lokal</h5>
+                                        <p class="mb-0">Ketahui lebih Lanjut tentang transportasi lokal yang tersedia diseram bagian barat.kami memberikan pilihan
+                                            transportasi seperti ojek,perahu, dan angkutan umum, serta tips dari masyarakat untuk mengakses tempat-tempat wisata di daerah ini.
                                         </p>
                                     </div>
                                 </div>
@@ -212,8 +217,9 @@
                                         <i class="fa fa-cog fa-4x text-primary"></i>
                                     </div>
                                     <div class="service-content">
-                                        <h5 class="mb-4">Layanan Konsultasi Perjalanan</h5>
-                                        <p class="mb-0">Butuh bantuan merencanakan perjalanan Anda? Tim kami siap memberikan konsultasi perjalanan untuk membantu Anda merancang liburan yang sempurna sesuai keinginan Anda.
+                                        <h5 class="mb-4">Destinasi Terpopuler</h5>
+                                        <p class="mb-0">seram bagian barat memiliki banyak potensi wisata yang sangat populer dan panorama yang luar biasa yang dapat
+                                            memberikan kesan menarik yant terlupakan pada petualangan anda ayo kunjungi wisata SBB.
                                         </p>
                                     </div>
                                 </div>
@@ -221,7 +227,9 @@
                         </div>
                     </div>
                     <div class="col-12">
-                       
+                        <div class="text-center">
+                            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="services.html">Lihat Lebih Lanjut</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -361,7 +369,7 @@
                         <a href="about.html"><i class="fas fa-angle-right me-2"></i> About</a>
                         <a href="index.html"><i class="fas fa-angle-right me-2"></i> Home</a>
                         <a href="blog.html"><i class="fas fa-angle-right me-2"></i> Blog</a>
-                        <a href="services.html"><i class="fas fa-angle-right me-2"></i> Services</a>
+                        <a href="services.html"><i class="fas fa-angle-right me-2"></i>Explore SBB</a>
                         <a href="packages.html"><i class="fas fa-angle-right me-2"></i> packages</a>
                         <a href="gallery.html"><i class="fas fa-angle-right me-2"></i> Our Galeri</a>
                     </div>
@@ -381,7 +389,7 @@
                     <div class="footer-item d-flex flex-column">
                         <h4 class="mb-4 text-white">Information-Hotels</h4>
                         <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contact</a>
-                        <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Kairatu</a>
+                        <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Piru</a>
                         <a href="hotel-kairatu-beach.html"><i class="fas fa-angle-right me-2"></i> Hotel Kairatu Beach</a>
                         <a href="arion-penginapan.html"><i class="fas fa-angle-right me-2"></i> Arion Penginapan</a>
                         <a href="mitra-hotel.html"><i class="fas fa-angle-right me-2"></i> Mitra Hotel</a>
