--- a/Blog-pulau-buano.html
+++ b/Blog-pulau-buano.html
@@ -75,7 +75,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="services.html" class="nav-item nav-link">Services</a>
+                        <a href="services.html" class="nav-item nav-link">Explore SBB</a>
                         <a href="packages.html" class="nav-item nav-link">Packages</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
@@ -164,7 +164,7 @@
                 <img src="img/selat valentine buano 6.jpg" class="img-fluid w-100 h-100 rounded" alt="Image">
               </div>
               <div class="desc">
-                <h3>Mm Ami</h3>
+                <h3>yus_nita</h3>
                 <div style="text-align: justify;">
                 <p>"terpesona oleh keindahan alam Selat Valentine. Air lautnya yang tenang dan jernih, hutan mangrove, serta tebing-tebing batu yang menjulang tinggi membuat tempat ini tampak seperti surga tersembunyi. Pulau-pulau kecil di sekitar selat juga menambah daya tarik wisata bahari di kawasan ini.ini merupakan wisata yang tak terlupakan bagi saya dan keluarga"</p>
               </div>
@@ -366,7 +366,7 @@
                     <a href="about.html"><i class="fas fa-angle-right me-2"></i> About</a>
                     <a href="index.html"><i class="fas fa-angle-right me-2"></i> Home</a>
                     <a href="blog.html"><i class="fas fa-angle-right me-2"></i> Blog</a>
-                    <a href="services.html"><i class="fas fa-angle-right me-2"></i> Services</a>
+                    <a href="services.html"><i class="fas fa-angle-right me-2"></i>Explore SBB</a>
                     <a href="packages.html"><i class="fas fa-angle-right me-2"></i> packages</a>
                     <a href="gallery.html"><i class="fas fa-angle-right me-2"></i> Our Galeri</a>
                 </div>
@@ -386,7 +386,7 @@
                 <div class="footer-item d-flex flex-column">
                     <h4 class="mb-4 text-white">Information-Hotels</h4>
                     <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contact</a>
-                    <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Kairatu</a>
+                    <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Piru</a>
                     <a href="hotel-kairatu-beach.html"><i class="fas fa-angle-right me-2"></i> Hotel Kairatu Beach</a>
                     <a href="arion-penginapan.html"><i class="fas fa-angle-right me-2"></i> Arion Penginapan</a>
                     <a href="mitra-hotel.html"><i class="fas fa-angle-right me-2"></i> Mitra Hotel</a>
