--- a/Blog-pulau-osi.html
+++ b/Blog-pulau-osi.html
@@ -75,7 +75,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="services.html" class="nav-item nav-link">Services</a>
+                        <a href="services.html" class="nav-item nav-link">Explore SBB</a>
                         <a href="packages.html" class="nav-item nav-link">Packages</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
@@ -177,7 +177,7 @@
                 <img src="img/osi 13.jpg" class="img-fluid w-100 h-100 rounded" alt="Image">
               </div>
               <div class="desc">
-                <h3>Mama Nona</h3>
+                <h3>yus_nita</h3>
                 <div style="text-align: justify;">
                 <p>"Berjalan di atas jembatan kayu di Pulau Osi adalah pengalaman yang tak terlupakan. Airnya sangat jernih sehingga saya bisa melihat dasar laut yang penuh dengan rumput laut dan kehidupan laut lainnya. Tempat ini sangat tenang dan damai, cocok untuk melarikan diri dari hiruk pikuk kota. Saya merasa benar-benar terhubung dengan alam di sini."</p>
               </div>
@@ -375,7 +375,7 @@
                     <a href="about.html"><i class="fas fa-angle-right me-2"></i> About</a>
                     <a href="index.html"><i class="fas fa-angle-right me-2"></i> Home</a>
                     <a href="blog.html"><i class="fas fa-angle-right me-2"></i> Blog</a>
-                    <a href="services.html"><i class="fas fa-angle-right me-2"></i> Services</a>
+                    <a href="services.html"><i class="fas fa-angle-right me-2"></i>Explore SBB</a>
                     <a href="packages.html"><i class="fas fa-angle-right me-2"></i> packages</a>
                     <a href="gallery.html"><i class="fas fa-angle-right me-2"></i> Our Galeri</a>
                 </div>
@@ -395,7 +395,7 @@
                 <div class="footer-item d-flex flex-column">
                     <h4 class="mb-4 text-white">Information-Hotels</h4>
                     <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contact</a>
-                    <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Kairatu</a>
+                    <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Piru</a>
                     <a href="hotel-kairatu-beach.html"><i class="fas fa-angle-right me-2"></i> Hotel Kairatu Beach</a>
                     <a href="arion-penginapan.html"><i class="fas fa-angle-right me-2"></i> Arion Penginapan</a>
                     <a href="mitra-hotel.html"><i class="fas fa-angle-right me-2"></i> Mitra Hotel</a>
