--- a/testimonial.html
+++ b/testimonial.html
@@ -66,7 +66,7 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a href="https://www.bing.com/mapbuilder/#background=Bing&disable_features=boundaries&map=8.00/-3.177/129.180"target="_blank" class="navbar-brand p-0">
                     <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Wisata-SBB</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
@@ -77,7 +77,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="services.html" class="nav-item nav-link">Services</a>
+                        <a href="services.html" class="nav-item nav-link">Explore SBB</a>
                         <a href="packages.html" class="nav-item nav-link">Packages</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
@@ -177,7 +177,7 @@
                             <a href="about.html"><i class="fas fa-angle-right me-2"></i> About</a>
                             <a href="index.html"><i class="fas fa-angle-right me-2"></i> Home</a>
                             <a href="blog.html"><i class="fas fa-angle-right me-2"></i> Blog</a>
-                            <a href="services.html"><i class="fas fa-angle-right me-2"></i> Services</a>
+                            <a href="services.html"><i class="fas fa-angle-right me-2"></i>Explore SBB</a>
                             <a href="packages.html"><i class="fas fa-angle-right me-2"></i> packages</a>
                             <a href="gallery.html"><i class="fas fa-angle-right me-2"></i> Our Galeri</a>
                         </div>
@@ -197,7 +197,7 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Information-Hotels</h4>
                             <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contact</a>
-                            <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Kairatu</a>
+                            <a href="guides.html"><i class="fas fa-angle-right me-2"></i> Hotel Amboina Piru</a>
                             <a href="hotel-kairatu-beach.html"><i class="fas fa-angle-right me-2"></i> Hotel Kairatu Beach</a>
                             <a href="arion-penginapan.html"><i class="fas fa-angle-right me-2"></i> Arion Penginapan</a>
                             <a href="mitra-hotel.html"><i class="fas fa-angle-right me-2"></i> Mitra Hotel</a>
